Rename frontend files, update links, replace old files with placeholders

--- a/found and lost/all-items.html
+++ b/found and lost/all-items.html
@@ -122,10 +122,10 @@
     <div class="header">
         <h1>CampusLost - All Items</h1>
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="auth.html">Home</a>
             <a href="post-item.html">Post Lost Item</a>
-            <a href="items.html">Report Found Item</a>
-            <a href="verification.html">Verify Claim</a>
+            <a href="found-items.html">Report Found Item</a>
+            <a href="verify-claim.html">Verify Claim</a>
         </div>
     </div>
 
