--- a/found and lost/all-items.html
+++ b/found and lost/all-items.html
@@ -5,155 +5,378 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Items - CampusLost</title>
     <style>
-        body {
-            font-family: Inter, system-ui;
-            margin: 0;
-            padding: 2rem;
-            background: #f5f8ff;
-        }
-        .header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .search-bar {
-            max-width: 600px;
-            margin: 0 auto 2rem;
-            display: flex;
-            gap: 1rem;
-        }
-        .search-bar input {
-            flex: 1;
-            padding: 0.8rem;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 1rem;
-        }
-        .search-bar button {
-            padding: 0.8rem 1.5rem;
-            background: #004080;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-        .filters {
-            max-width: 600px;
-            margin: 0 auto 2rem;
-            display: flex;
-            gap: 1rem;
-            flex-wrap: wrap;
-        }
-        .filters select, .filters button {
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-        }
-        .items-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 1.5rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .item-card {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            border-left: 4px solid #004080;
-        }
-        .item-card.found {
-            border-left-color: #28a745;
-        }
-        .item-card.lost {
-            border-left-color: #dc3545;
-        }
-        .item-title {
-            font-weight: 600;
-            font-size: 1.1rem;
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-        .item-status {
-            display: inline-block;
-            padding: 0.3rem 0.8rem;
-            border-radius: 20px;
-            font-size: 0.8rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-        .item-status.found {
-            background: #d4edda;
-            color: #155724;
-        }
-        .item-status.lost {
-            background: #f8d7da;
-            color: #721c24;
-        }
-        .item-description {
-            color: #666;
-            margin-bottom: 1rem;
-            line-height: 1.4;
-        }
-        .item-meta {
-            font-size: 0.9rem;
-            color: #888;
-        }
-        .loading {
-            text-align: center;
-            padding: 2rem;
-            color: #666;
-        }
-        .nav-links {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-        .nav-links a {
-            margin: 0 1rem;
-            padding: 0.5rem 1rem;
-            background: #004080;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-        }
+      :root {
+        --primary: #2155ff;
+        --primary-dark: #1230a3;
+        --accent: #ffb347;
+        --accent-dark: #e09330;
+        --surface: rgba(17, 25, 40, 0.85);
+        --surface-light: rgba(255, 255, 255, 0.08);
+        --border-subtle: rgba(255, 255, 255, 0.18);
+        --text-main: #f9fafb;
+        --text-muted: #9ca3af;
+        --radius-card: 20px;
+        --radius-input: 12px;
+        --shadow-soft: 0 18px 45px rgba(15, 23, 42, 0.55);
+        --transition-fast: 180ms ease-out;
+        --transition-med: 260ms ease;
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Inter', sans-serif;
+      }
+
+      body {
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        padding: 2.5rem 1.5rem;
+        color: var(--text-main);
+        background: #020617;
+        position: relative;
+        overflow-x: hidden;
+      }
+
+      /* Blurred background image */
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        background-image: url("bg1.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        filter: blur(7px) brightness(0.85);
+        transform: scale(1.04);
+        z-index: -2;
+      }
+
+      /* Tinted overlay + subtle pattern */
+      body::after {
+        content: "";
+        position: fixed;
+        inset: 0;
+        background:
+          radial-gradient(circle at 18% 20%, rgba(59, 130, 246, 0.25), transparent 45%),
+          radial-gradient(circle at 82% 78%, rgba(244, 114, 182, 0.22), transparent 42%),
+          linear-gradient(120deg, rgba(15, 23, 42, 0.78), rgba(15, 23, 42, 0.92)),
+          repeating-linear-gradient(
+            to right,
+            rgba(59, 130, 246, 0.18) 0,
+            rgba(59, 130, 246, 0.18) 1px,
+            transparent 1px,
+            transparent 28px
+          ),
+          repeating-linear-gradient(
+            to bottom,
+            rgba(59, 130, 246, 0.12) 0,
+            rgba(59, 130, 246, 0.12) 1px,
+            transparent 1px,
+            transparent 28px
+          );
+        mix-blend-mode: soft-light;
+        opacity: 0.55;
+        z-index: -1;
+        pointer-events: none;
+      }
+
+      .card {
+        background: linear-gradient(135deg, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.85));
+        border-radius: var(--radius-card);
+        border: 1px solid rgba(148, 163, 184, 0.25);
+        box-shadow: var(--shadow-soft);
+        width: min(1100px, 96vw);
+        padding: 2.2rem 2rem;
+        text-align: left;
+        backdrop-filter: blur(22px);
+        -webkit-backdrop-filter: blur(22px);
+        position: relative;
+        overflow: hidden;
+        animation: cardEntrance 420ms var(--transition-med);
+      }
+
+      .card::before {
+        content: "";
+        position: absolute;
+        inset: -1px;
+        border-radius: inherit;
+        background: linear-gradient(135deg, rgba(59, 130, 246, 0.7), rgba(244, 114, 182, 0.35), rgba(56, 189, 248, 0.5));
+        opacity: 0;
+        transition: opacity var(--transition-med);
+        z-index: -1;
+      }
+
+      .card:hover::before {
+        opacity: 0.35;
+      }
+
+      h1 {
+        color: #e5e7eb;
+        font-size: 1.6rem;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        margin-bottom: 0.25rem;
+      }
+
+      .brand-tagline {
+        color: var(--text-muted);
+        font-size: 0.82rem;
+        letter-spacing: 0.14em;
+        text-transform: uppercase;
+        margin-bottom: 1.3rem;
+      }
+
+      .auth-title {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: #f9fafb;
+        margin-bottom: 0.35rem;
+      }
+
+      .auth-subtitle {
+        font-size: 0.96rem;
+        color: var(--text-muted);
+        margin-bottom: 1.4rem;
+      }
+
+      .nav-links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.6rem;
+        margin: 1rem 0 1.6rem;
+      }
+
+      .nav-links a {
+        color: #e5e7eb;
+        text-decoration: none;
+        padding: 0.65rem 0.95rem;
+        border-radius: 999px;
+        border: 1px solid rgba(148, 163, 184, 0.25);
+        background: rgba(255, 255, 255, 0.04);
+        transition: all var(--transition-fast);
+        font-weight: 600;
+        font-size: 0.92rem;
+      }
+
+      .nav-links a:hover {
+        background: rgba(255, 255, 255, 0.08);
+        border-color: rgba(191, 219, 254, 0.6);
+        box-shadow: 0 10px 25px rgba(15, 23, 42, 0.35);
+      }
+
+      .control-row {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        gap: 0.75rem;
+        margin-bottom: 1rem;
+        align-items: center;
+      }
+
+      .filters {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+        gap: 0.75rem;
+        margin-bottom: 1.5rem;
+      }
+
+      input, select {
+        width: 100%;
+        padding: 0.9rem 0.95rem;
+        border-radius: var(--radius-input);
+        border: 1px solid rgba(148, 163, 184, 0.6);
+        background: rgba(15, 23, 42, 0.9);
+        color: #e5e7eb;
+        font-size: 0.96rem;
+        outline: none;
+        transition: border-color var(--transition-fast), box-shadow var(--transition-fast), background-color var(--transition-fast), transform var(--transition-fast);
+      }
+
+      input::placeholder {
+        color: rgba(148, 163, 184, 0.8);
+        font-size: 0.9rem;
+      }
+
+      input:focus-visible, select:focus-visible {
+        border-color: rgba(96, 165, 250, 0.85);
+        box-shadow: 0 0 0 1px rgba(59, 130, 246, 0.75), 0 10px 30px rgba(37, 99, 235, 0.35);
+        background: rgba(15, 23, 42, 0.96);
+        transform: translateY(-1px);
+      }
+
+      button {
+        width: 100%;
+        padding: 0.95rem 1rem;
+        border: none;
+        border-radius: 999px;
+        font-weight: 600;
+        font-size: 0.98rem;
+        cursor: pointer;
+        letter-spacing: 0.02em;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.35rem;
+        transition: background var(--transition-med), transform var(--transition-fast), box-shadow var(--transition-fast), filter var(--transition-fast);
+      }
+
+      button:focus-visible {
+        outline: 2px solid rgba(248, 250, 252, 0.9);
+        outline-offset: 3px;
+      }
+
+      .login-btn {
+        background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+        color: #f9fafb;
+        box-shadow: 0 14px 30px rgba(37, 99, 235, 0.45);
+      }
+
+      .login-btn:hover {
+        filter: brightness(1.03);
+        transform: translateY(-1px);
+        box-shadow: 0 18px 40px rgba(37, 99, 235, 0.6);
+      }
+
+      .login-btn:active {
+        transform: translateY(1px) scale(0.99);
+        box-shadow: 0 9px 22px rgba(37, 99, 235, 0.5);
+      }
+
+      .ghost-btn {
+        background: rgba(255, 255, 255, 0.04);
+        color: #e5e7eb;
+        border: 1px solid rgba(148, 163, 184, 0.45);
+        box-shadow: 0 10px 22px rgba(15, 23, 42, 0.45);
+      }
+
+      .ghost-btn:hover {
+        background: rgba(255, 255, 255, 0.08);
+        border-color: rgba(191, 219, 254, 0.65);
+        transform: translateY(-1px);
+      }
+
+      .items-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        gap: 1rem;
+        width: 100%;
+      }
+
+      .item-card {
+        background: rgba(255, 255, 255, 0.03);
+        border: 1px solid rgba(148, 163, 184, 0.2);
+        border-radius: 14px;
+        padding: 1.3rem;
+        box-shadow: 0 16px 38px rgba(15, 23, 42, 0.45);
+      }
+
+      .item-title {
+        font-weight: 600;
+        font-size: 1.05rem;
+        margin-bottom: 0.4rem;
+        color: #e5e7eb;
+      }
+
+      .item-description {
+        color: var(--text-muted);
+        margin-bottom: 0.8rem;
+        line-height: 1.5;
+      }
+
+      .item-meta {
+        font-size: 0.9rem;
+        color: rgba(226, 232, 240, 0.85);
+        display: grid;
+        gap: 0.25rem;
+      }
+
+      .item-status {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.4rem;
+        padding: 0.32rem 0.9rem;
+        border-radius: 999px;
+        font-size: 0.82rem;
+        font-weight: 700;
+        letter-spacing: 0.02em;
+        margin-bottom: 0.6rem;
+      }
+
+      .item-status.found {
+        background: rgba(34, 197, 94, 0.16);
+        color: #34d399;
+        border: 1px solid rgba(34, 197, 94, 0.35);
+      }
+
+      .item-status.lost {
+        background: rgba(248, 113, 113, 0.16);
+        color: #fca5a5;
+        border: 1px solid rgba(248, 113, 113, 0.35);
+      }
+
+      .loading {
+        text-align: center;
+        padding: 1.5rem 0;
+        color: var(--text-muted);
+        font-weight: 600;
+      }
+
+      @keyframes cardEntrance {
+        from { opacity: 0; transform: translateY(18px) scale(0.98); }
+        to { opacity: 1; transform: translateY(0) scale(1); }
+      }
+
+      @media (max-width: 640px) {
+        body { padding: 1.5rem 1rem; }
+        .card { padding: 1.6rem 1.25rem; }
+        .control-row { grid-template-columns: 1fr; }
+      }
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1>CampusLost - All Items</h1>
-        <div class="nav-links">
-            <a href="auth.html">Home</a>
-            <a href="post-item.html">Post Lost Item</a>
-            <a href="found-items.html">Report Found Item</a>
-            <a href="verify-claim.html">Verify Claim</a>
-        </div>
-    </div>
+  <div class="card">
+    <header>
+      <h1>CampusLost</h1>
+      <p class="brand-tagline">Smart campus lost &amp; found</p>
+      <div class="auth-title">All Items</div>
+      <p class="auth-subtitle">Browse all lost and found reports across campus.</p>
+      <div class="nav-links">
+        <a href="auth.html">Home</a>
+        <a href="post-item.html">Post Lost Item</a>
+        <a href="found-items.html">Report Found Item</a>
+        <a href="verify-claim.html">Verify Claim</a>
+      </div>
+    </header>
 
-    <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Search items...">
-        <button onclick="searchItems()">Search</button>
+    <div class="control-row">
+      <input type="text" id="searchInput" placeholder="Search items..." aria-label="Search items">
+      <button class="login-btn" onclick="searchItems()">Search</button>
     </div>
 
     <div class="filters">
-        <select id="statusFilter">
-            <option value="">All Status</option>
-            <option value="LOST">Lost Only</option>
-            <option value="FOUND">Found Only</option>
-        </select>
-        <select id="categoryFilter">
-            <option value="">All Categories</option>
-            <option value="Documents">Documents</option>
-            <option value="Electronics">Electronics</option>
-            <option value="Accessories">Accessories</option>
-            <option value="Books">Books</option>
-            <option value="Other">Other</option>
-        </select>
-        <button onclick="applyFilters()">Apply Filters</button>
-        <button onclick="clearFilters()">Clear</button>
+      <select id="statusFilter" aria-label="Filter by status">
+        <option value="">All Status</option>
+        <option value="LOST">Lost Only</option>
+        <option value="FOUND">Found Only</option>
+      </select>
+      <select id="categoryFilter" aria-label="Filter by category">
+        <option value="">All Categories</option>
+        <option value="Documents">Documents</option>
+        <option value="Electronics">Electronics</option>
+        <option value="Accessories">Accessories</option>
+        <option value="Books">Books</option>
+        <option value="Other">Other</option>
+      </select>
+      <button class="ghost-btn" onclick="applyFilters()">Apply Filters</button>
+      <button class="ghost-btn" onclick="clearFilters()">Clear</button>
     </div>
 
     <div id="loading" class="loading">Loading items...</div>
     <div id="itemsGrid" class="items-grid"></div>
+  </div>
 
     <script>
         const API_BASE = 'http://localhost:8081';
