--- a/found and lost/auth.html
+++ b/found and lost/auth.html
@@ -98,27 +98,68 @@
     }
 
     /* Glassmorphism auth card */
-    .card {
-      background: linear-gradient(
-        135deg,
-        rgba(15, 23, 42, 0.95),
-        rgba(15, 23, 42, 0.85)
-      );
-      border-radius: var(--radius-card);
-      border: 1px solid rgba(148, 163, 184, 0.25);
-      box-shadow: var(--shadow-soft);
-      width: 360px;
-      max-width: 100%;
-      padding: 2.4rem 2.2rem 2.2rem;
-      text-align: left;
-      backdrop-filter: blur(22px);
-      -webkit-backdrop-filter: blur(22px);
+    body { 
+      min-height: 100vh; 
+      display: flex; 
+      justify-content: center;
+      align-items: center;
+      background: #000; /* fallback color */
+      color: var(--light);
       position: relative;
       overflow: hidden;
-      animation: cardEntrance 420ms var(--transition-med);
     }
 
+    /* background image layer (blurred) */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background-image: url("bg1.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      filter: blur(6px) brightness(0.85);
+      transform: scale(1.03);
+      z-index: -2;
+    }
+
+    /* color shade overlay to match theme */
+    body::after {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,64,128,0.45); /* tinted overlay using primary-like shade */
+      z-index: -1;
+    }
+    
+
     /* Subtle gradient border glow on card edges */
+    .card {
+      position: relative;
+      width: 360px;
+      max-width: 100%;
+      padding: 2rem;
+      border-radius: var(--radius-card);
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
+      box-shadow: var(--shadow-soft);
+      overflow: hidden;
+    }
+
+    /* Use dashboard card padding for signup (matches 1.5rem 1rem) */
+    #registerSection {
+      padding: 0.9rem 0.75rem; /* reduced vertical and horizontal padding */
+      width: 320px; /* slightly narrower than main card */
+      box-sizing: border-box;
+    }
+
+    /* Compact inputs for signup to shorten text area */
+    #registerSection input {
+      padding: 0.7rem 0.8rem;
+      font-size: 0.92rem;
+    }
+
+    #registerSection .auth-header { margin-bottom: 0.8rem; }
+
     .card::before {
       content: "";
       position: absolute;
@@ -464,7 +505,7 @@
     <p class="brand-tagline">Smart campus lost &amp; found</p>
 
     <div class="auth-header">
-      <h2 class="auth-title">Welcome 👋 Let’s get started</h2>
+      <!-- <h2 class="auth-title">Welcome 👋 Let’s get started</h2> -->
       <p class="auth-subtitle">Sign in to access your CampusLost dashboard and manage lost &amp; found items.</p>
     </div>
 
