--- a/found and lost/dashboard.html
+++ b/found and lost/dashboard.html
@@ -5,112 +5,217 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CampusLost - Dashboard</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
     :root {
-      --primary: #004080;
-      --secondary: #ffcc00;
-      --card-bg: rgba(255, 255, 255, 0.9);
-      --card-shadow: rgba(0, 0, 0, 0.15);
+      --primary: #2155ff;
+      --primary-dark: #1230a3;
+      --accent: #ffb347;
+      --accent-dark: #e09330;
+      --surface: rgba(17, 25, 40, 0.85);
+      --surface-light: rgba(255, 255, 255, 0.08);
+      --border-subtle: rgba(255, 255, 255, 0.18);
+      --text-main: #f9fafb;
+      --text-muted: #9ca3af;
+      --radius-card: 20px;
+      --radius-input: 12px;
+      --shadow-soft: 0 18px 45px rgba(15, 23, 42, 0.55);
+      --transition-fast: 180ms ease-out;
+      --transition-med: 260ms ease;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Inter', sans-serif;
     }
 
     body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      align-items: center;
-      background: url("Frontview 2023.jpg") no-repeat center center fixed;
-      background-size: cover;
+      align-items: flex-start;
+      padding: 2.5rem 1.5rem;
+      color: var(--text-main);
+      background: #020617;
+      position: relative;
+      overflow-x: hidden;
     }
 
     body::before {
       content: "";
       position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(255, 255, 255, 0.5); /* semi-transparent overlay */
+      inset: 0;
+      background-image: url("bg1.jpg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      filter: blur(7px) brightness(0.85);
+      transform: scale(1.04);
+      z-index: -2;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background:
+        radial-gradient(circle at 18% 20%, rgba(59, 130, 246, 0.25), transparent 45%),
+        radial-gradient(circle at 82% 78%, rgba(244, 114, 182, 0.22), transparent 42%),
+        linear-gradient(120deg, rgba(15, 23, 42, 0.78), rgba(15, 23, 42, 0.92)),
+        repeating-linear-gradient(to right, rgba(59, 130, 246, 0.18) 0, rgba(59, 130, 246, 0.18) 1px, transparent 1px, transparent 28px),
+        repeating-linear-gradient(to bottom, rgba(59, 130, 246, 0.12) 0, rgba(59, 130, 246, 0.12) 1px, transparent 1px, transparent 28px);
+      mix-blend-mode: soft-light;
+      opacity: 0.55;
       z-index: -1;
-    }
-
-    .dashboard-container {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-
-    .dashboard-header {
-      font-size: 2rem;
-      font-weight: 700;
-      color: var(--primary);
-      margin-bottom: 2rem;
+      pointer-events: none;
     }
 
     .card {
-      background: var(--card-bg);
-      padding: 1.5rem 1rem;
-      border-radius: 15px;
-      box-shadow: 0 6px 15px var(--card-shadow);
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: var(--primary);
+      background: linear-gradient(135deg, rgba(15, 23, 42, 0.95), rgba(15, 23, 42, 0.85));
+      border-radius: var(--radius-card);
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      box-shadow: var(--shadow-soft);
+      width: min(480px, 96vw);
+      padding: 2.2rem 2rem;
+      text-align: center;
+      backdrop-filter: blur(22px);
+      -webkit-backdrop-filter: blur(22px);
+      position: relative;
+      overflow: hidden;
+      animation: cardEntrance 420ms var(--transition-med);
+    }
+
+    .card::before {
+      content: "";
+      position: absolute;
+      inset: -1px;
+      border-radius: inherit;
+      background: linear-gradient(135deg, rgba(59, 130, 246, 0.7), rgba(244, 114, 182, 0.35), rgba(56, 189, 248, 0.5));
+      opacity: 0;
+      transition: opacity var(--transition-med);
+      z-index: -1;
+    }
+
+    .card:hover::before { opacity: 0.35; }
+
+    h1 {
+      color: #e5e7eb;
+      font-size: 1.55rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      margin-bottom: 0.35rem;
+    }
+
+    .brand-tagline {
+      color: var(--text-muted);
+      font-size: 0.82rem;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      margin-bottom: 1.4rem;
+    }
+
+    .dashboard-header {
+      font-size: 1.35rem;
+      font-weight: 700;
+      color: #f9fafb;
+      margin-bottom: 1.4rem;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 0.75rem;
+      width: 100%;
+    }
+
+    a.tile {
       text-decoration: none;
+      color: #e5e7eb;
+      background: rgba(255, 255, 255, 0.04);
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      padding: 0.95rem 1rem;
+      border-radius: 14px;
       display: flex;
-      justify-content: center;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.75rem;
+      font-weight: 600;
+      letter-spacing: 0.01em;
+      transition: transform var(--transition-fast), box-shadow var(--transition-fast), border-color var(--transition-fast);
+      box-shadow: 0 14px 30px rgba(15, 23, 42, 0.35);
     }
 
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px var(--card-shadow);
+    a.tile:hover {
+      transform: translateY(-2px);
+      border-color: rgba(191, 219, 254, 0.65);
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.45);
     }
 
-    .card i {
-      font-size: 1.5rem;
+    .tile .icon {
+      width: 42px;
+      height: 42px;
+      border-radius: 12px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, rgba(59, 130, 246, 0.35), rgba(59, 130, 246, 0.12));
+      color: #cfe1ff;
+      font-weight: 700;
+      font-size: 1.05rem;
     }
 
     footer {
       position: fixed;
-      bottom: 10px;
-      width: 100%;
+      bottom: 14px;
+      left: 0;
+      right: 0;
       text-align: center;
-      font-size: 0.85rem;
-      color: var(--primary);
+      font-size: 0.82rem;
+      color: rgba(209, 213, 219, 0.9);
+      text-shadow: 0 1px 3px rgba(15, 23, 42, 0.9);
+      pointer-events: none;
+    }
+
+    @keyframes cardEntrance {
+      from { opacity: 0; transform: translateY(18px) scale(0.98); }
+      to { opacity: 1; transform: translateY(0) scale(1); }
+    }
+
+    @media (max-width: 520px) {
+      body { padding: 1.5rem 1rem; }
+      .card { padding: 1.7rem 1.35rem; }
     }
   </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
-<div class="dashboard-container">
-  <div class="dashboard-header">CampusLost Dashboard</div>
+  <div class="card">
+    <h1>CampusLost</h1>
+    <p class="brand-tagline">Smart campus lost &amp; found</p>
+    <div class="dashboard-header">Dashboard</div>
 
-  <a href="lost.html" class="card">
-    <i class="fas fa-search"></i> Lost Items
-  </a>
+    <div class="grid">
+      <a href="all-items.html" class="tile">
+        <span class="icon">🔍</span>
+        <span>Browse All Items</span>
+      </a>
+      <a href="found-items.html" class="tile">
+        <span class="icon">✅</span>
+        <span>Report Found Item</span>
+      </a>
+      <a href="post-item.html" class="tile">
+        <span class="icon">➕</span>
+        <span>Post Lost Item</span>
+      </a>
+      <a href="verify-claim.html" class="tile">
+        <span class="icon">🔒</span>
+        <span>Verify Claim</span>
+      </a>
+    </div>
+  </div>
 
-  <a href="items.html" class="card">
-    <i class="fas fa-check-circle"></i> Found Items
-  </a>
-
-  <a href="post-item.html" class="card">
-    <i class="fas fa-plus-circle"></i> Post Item
-  </a>
-
-  <a href="chat.html" class="card">
-    <i class="fas fa-comments"></i> Chat / Messages
-  </a>
-</div>
-
-<footer>
-  © 2025 CampusLost | Built with ❤️ for students
-</footer>
+  <footer>
+    © 2025 CampusLost | Built with ❤️ for students
+  </footer>
 
 </body>
 </html>
