--- a/found and lost/found-items.html
+++ b/found and lost/found-items.html
@@ -40,7 +40,8 @@
         content: "";
         position: fixed;
         inset: 0;
-        background-image: url("bg1.jpg");
+        /* use the project's Frontview image (spaces preserved) */
+        background-image: url("Frontview 2023.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
